objects/CSE_External_Link__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Success_Engagement__c</fullName>
        <description>Relationship to Customer Success Engagement</description>
        <label>Customer Success Engagement</label>
        <referenceTo>Customer_Success_Engagement__c</referenceTo>
        <relationshipLabel>CSE External Links</relationshipLabel>
        <relationshipName>CSE_External_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Link_Date__c</fullName>
        <description>Date when the event took place</description>
        <label>External Link Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Link__c</fullName>
        <description>Link to documents stored outside of salesforce</description>
        <label>External Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Awareness</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CSE External Link</label>
    <nameField>
        <displayFormat>ERL-{000000}</displayFormat>
        <label>External Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSE External Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>